[gd_scene load_steps=11 format=3 uid="uid://br1y52xgq4fuq"]

[ext_resource type="Script" path="res://Assets/Enemies/purple_mushrrom.gd" id="1_jvrpj"]
[ext_resource type="Texture2D" uid="uid://wq0r2em3ej6l" path="res://Assets/Nuotraukos/Purple Mushroom/Stand.png" id="1_sp5h4"]
[ext_resource type="PackedScene" uid="uid://bah1r54jnce6a" path="res://Assets/Enemies/bullet2.tscn" id="2_1odrq"]
[ext_resource type="Texture2D" uid="uid://cwcnhe5a70nrd" path="res://Assets/Nuotraukos/Purple Mushroom/Walk1.png" id="2_1tjbn"]
[ext_resource type="Texture2D" uid="uid://cnfnk2kmb4tpy" path="res://Assets/Nuotraukos/Purple Mushroom/Walk2.png" id="3_rx2lt"]
[ext_resource type="Texture2D" uid="uid://b85riuem0awa0" path="res://Assets/Nuotraukos/Purple Mushroom/Walk3.png" id="4_puqtd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_m0jxw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_sp5h4")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_1tjbn")
}, {
"duration": 1.0,
"texture": ExtResource("3_rx2lt")
}, {
"duration": 1.0,
"texture": ExtResource("4_puqtd")
}],
"loop": true,
"name": &"Walking",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h76e6"]
size = Vector2(38, 44)

[sub_resource type="CircleShape2D" id="CircleShape2D_tdaxg"]
radius = 305.002

[sub_resource type="CircleShape2D" id="CircleShape2D_72jvn"]
radius = 33.0606

[node name="PurpleMushrrom" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_jvrpj")
ammo = ExtResource("2_1odrq")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(9.53674e-07, -9.53674e-07)
scale = Vector2(1.375, 1.375)
sprite_frames = SubResource("SpriteFrames_m0jxw")
animation = &"Walking"
autoplay = "Idle"
frame_progress = 0.787506

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(300, 1)

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="BulletPoint" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_h76e6")

[node name="Detection" type="Area2D" parent="." groups=["Enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource("CircleShape2D_tdaxg")

[node name="StopDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StopDetection"]
shape = SubResource("CircleShape2D_72jvn")

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_detection_body_exited"]
[connection signal="body_entered" from="StopDetection" to="." method="_on_stop_detection_body_entered"]
[connection signal="body_exited" from="StopDetection" to="." method="_on_stop_detection_body_exited"]
